# FastApiMediaSharingPlatform

./: .env  .gitignore  README.md  frontend.py  main.py  pyproject.toml  test.db
app/: app.py  db.py  schemas.py  users.py
